# TestForge

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml
examples/: sample_calculator.py  test_calculator.py
screenshots/: demo.txt
src/testforge/: __init__.py  cli.py
src/testforge/analysis/: __init__.py  coverage.py
src/testforge/autogen/: __init__.py  test_generator.py
src/testforge/cicd/: __init__.py  pipeline.py
src/testforge/core/: __init__.py  analyzer.py  executor.py  mutation.py  mutator.py  scorer.py
src/testforge/debugging/: __init__.py  time_travel.py
src/testforge/integration/: __init__.py  runner.py
src/testforge/operators/: __init__.py  arithmetic.py  base.py  logical.py  registry.py  relational.py  statement.py
src/testforge/reporting/: __init__.py  generator.py  visualizer.py
src/testforge/utils/: __init__.py  helpers.py
tests/: test_mutation.py  test_scorer.py
tests/integration/: test_integration.py
tests/unit/: test_core.py
